cloudformation/stacks/vpc.yml
# ------------------------------------------------------------#
# Create Resource
# - VPC
# - InternetGateway
# - PrivateSubnet
# - PublicSubnet
# - RouteTable
# - Route
# - securityGroup
# ------------------------------------------------------------#

AWSTemplateFormatVersion: "2010-09-09"
Description:
  VPC and Subnet Create

Metadata:
  "AWS::CloudFormation::Interface":
    ParameterGroups:
      - Label:
          default: "Project Name Prefix"
        Parameters:
          - PJPrefix
      - Label:
          default: VPC
        Parameters:
          - VPCCIDR
      - Label:
          default: PublicSubnet
        Parameters:
          - PublicSubnet1CIDR
          - PublicSubnet2CIDR
      # - Label:
      #     default: PrivateSubnet
      #   Parameters:
      #     - PrivateSubnet1CIDR
      #     - PrivateSubnet1CIDR

# ------------------------------------------------------------#
# Input Parameters
# ------------------------------------------------------------#
Parameters:
  PJPrefix:
    Type: String
    Default: Laravel
    ConstraintDescription: Invalid input value for the PJPrefix.

  VPCCIDR:
    Type: String
    Default: 10.0.0.0/16
    MinLength: 9
    MaxLength: 18
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid VPCCidrBlock.

  PublicSubnet1CIDR:
    Type: String
    Default: 10.0.0.0/24
    MinLength: 9
    MaxLength: 18
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid PublicSubnet1CidrBlock.

  PublicSubnet2CIDR:
    Type: String
    Default: 10.0.1.0/24
    MinLength: 9
    MaxLength: 18
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid PublicSubnet2CidrBlock.

  # PrivateSubnet1CIDR:
  #   Type: String
  #   Default: 10.1.4.0/24
  #   MinLength: 9
  #   MaxLength: 18
  #   AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
  #   ConstraintDescription: must be a valid PrivateSubnet1CidrBlock.

  # PrivateSubnet2CIDR:
  #   Type: String
  #   Default: 10.1.5.0/24
  #   MinLength: 9
  #   MaxLength: 18
  #   AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
  #   ConstraintDescription: must be a valid PrivateSubnet2CidrBlock.

Resources:
# ------------------------------------------------------------#
#  VPC
# ------------------------------------------------------------#
# VPC Create
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub "${PJPrefix}-vpc"

# InternetGateway Create
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${PJPrefix}-igw"

# IGW Attach
  InternetGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

# ------------------------------------------------------------#
#  Subnet
# ------------------------------------------------------------#
# Public SubnetA Create
  PublicSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [ 0, !GetAZs ]
      CidrBlock: !Ref PublicSubnet1CIDR
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${PJPrefix}-public-subnet-1"

# Public SubnetC Create
  PublicSubnet2:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [ 1, !GetAZs ]
      CidrBlock: !Ref PublicSubnet2CIDR
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${PJPrefix}-public-subnet-2"

# # Private SubnetA Create
#   PrivateSubnet1:
#     Type: "AWS::EC2::Subnet"
#     Properties:
#       AvailabilityZone: !Select [ 0, !GetAZs ]
#       CidrBlock: !Ref PrivateSubnet1CIDR
#       VpcId: !Ref VPC
#       Tags:
#         - Key: Name
#           Value: !Sub "${PJPrefix}-private-subnet-1"

# # Private SubnetC Create
#   PrivateSubnet2:
#     Type: "AWS::EC2::Subnet"
#     Properties:
#       AvailabilityZone: !Select [ 1, !GetAZs ]
#       CidrBlock: !Ref PrivateSubnet2CIDR
#       VpcId: !Ref VPC
#       Tags:
#         - Key: Name
#           Value: !Sub "${PJPrefix}-private-subnet-2"

# ------------------------------------------------------------#
#  RouteTable
# ------------------------------------------------------------#
# Public RouteTable1 Create
  PublicRouteTable1:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${PJPrefix}-public-route-1"

# Public RouteTable2 Create
  PublicRouteTable2:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${PJPrefix}-public-route-2"

# # Private RouteTable1 Create
#   PrivateRouteTable1:
#     Type: "AWS::EC2::RouteTable"
#     Properties:
#       VpcId: !Ref VPC
#       Tags:
#         - Key: Name
#           Value: !Sub "${PJPrefix}-private-route-1"

# # Private RouteTable2 Create
#   PrivateRouteTable2:
#     Type: "AWS::EC2::RouteTable"
#     Properties:
#       VpcId: !Ref VPC
#       Tags:
#         - Key: Name
#           Value: !Sub "${PJPrefix}-private-route-2"

# ------------------------------------------------------------#
# Routing
# ------------------------------------------------------------#
# PublicRoute1 Create
  PublicRoute1:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PublicRouteTable1
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

# PublicRoute2 Create
  PublicRoute2:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PublicRouteTable2
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

# ------------------------------------------------------------#
# RouteTable Associate
# ------------------------------------------------------------#
# PublicRouteTable Associate Subnet1
  PublicSubnet1RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable1

# PublicRouteTable Associate Subnet2
  PublicSubnet2RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable2

# # PrivateRouteTable Associate Subnet1
#   PrivateSubnet1RouteTableAssociation:
#     Type: "AWS::EC2::SubnetRouteTableAssociation"
#     Properties:
#       SubnetId: !Ref PrivateSubnet1
#       RouteTableId: !Ref PrivateRouteTable1

# # PrivateRouteTable Associate Subnet2
#   PrivateSubnet1RouteTableAssociation:
#     Type: "AWS::EC2::SubnetRouteTableAssociation"
#     Properties:
#       SubnetId: !Ref PrivateSubnet1
#       RouteTableId: !Ref PrivateRouteTable2

  # ------------------------------------------------------------#
  #  SecurityGroup
  # ------------------------------------------------------------#
  SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${PJPrefix}-SG"
      GroupDescription: !Sub "${PJPrefix}-SG-Description"
      VpcId: !Ref VPC
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - Description: Enable HTTP access via port 80 IPv4
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - Description: Enable HTTP access via port 80 IPv6
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: ::/0
        - Description: Enable HTTPS access via port 443 IPv4
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - Description: Enable HTTPS access via port 443 IPv6
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: ::/0
      Tags:
        - Key: Name
          Value: !Sub "${PJPrefix}-SG"

# ------------------------------------------------------------#
# Output Parameters
# ------------------------------------------------------------#
Outputs:
# VPC
  VPC:
    Value: !Ref VPC
    Export:
      Name: !Sub "${PJPrefix}-vpc"

  VPCCIDR:
    Value: !Ref VPCCIDR
    Export:
      Name: !Sub "${PJPrefix}-vpc-cidr"

# Subnet
  PublicSubnet1:
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "${PJPrefix}-public-subnet-1"

  PublicSubnet1CIDR:
    Value: !Ref PublicSubnet1CIDR
    Export:
      Name: !Sub "${PJPrefix}-public-subnet-1-cidr"

  PublicSubnet2:
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "${PJPrefix}-public-subnet-2"

  PublicSubnet2CIDR:
    Value: !Ref PublicSubnet2CIDR
    Export:
      Name: !Sub "${PJPrefix}-public-subnet-2-cidr"

  # PrivateSubnet1:
  #   Value: !Ref PrivateSubnet1
  #   Export:
  #     Name: !Sub "${PJPrefix}-private-subnet-1"

  # PrivateSubnet1CIDR:
  #   Value: !Ref PrivateSubnet1CIDR
  #   Export:
  #     Name: !Sub "${PJPrefix}-private-subnet-1-cidr"

  # PrivateSubnet2:
  #   Value: !Ref PrivateSubnet2
  #   Export:
  #     Name: !Sub "${PJPrefix}-private-subnet-2"

  # PrivateSubnet2CIDR:
  #   Value: !Ref PrivateSubnet2CIDR
  #   Export:
  #     Name: !Sub "${PJPrefix}-private-subnet-2-cidr"

# Route
  PublicRouteTable1:
    Value: !Ref PublicRouteTable1
    Export:
      Name: !Sub "${PJPrefix}-public-route-1"

  PublicRouteTable1:
    Value: !Ref PublicRouteTable1
    Export:
      Name: !Sub "${PJPrefix}-public-route-1"

  # PrivateRouteTable2:
  #   Value: !Ref PrivateRouteTable2
  #   Export:
  #     Name: !Sub "${PJPrefix}-private-route-2"

  # PrivateRouteTable2:
  #   Value: !Ref PrivateRouteTable2
  #   Export:
  #     Name: !Sub "${PJPrefix}-private-route-2"

# SG
  SG:
    Value: !Ref SG
    Export:
      Name: !Sub "${PJPrefix}-SG"
